@@ -1,0 +1,11 @@
+<?php
+
+// DO NOT REMOVE OR CHANGE THESE 2 LINES:
+$MCONF['name'] = 'file_txsphinxM1';
+$MCONF['script'] = '_DISPATCH';
+
+$MCONF['access'] = 'user,group';
+
+$MLANG['default']['tabs_images']['tab'] = '../../../ext_icon.gif';
+$MLANG['default']['ll_ref'] = 'LLL:EXT:sphinx/Resources/Private/Language/locallang_mod.xml';
+?>
