@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for module &quot;file_txsphinxM1&quot; - header, description</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="mlang_tabs_tab">Sphinx Console</label>
+			<label index="mlang_labels_tabdescr">This module allows you to render output for your Sphinx documentation projects</label>
+			<label index="mlang_labels_tablabel">Sphinx Python Documentation Generator</label>
+		</languageKey>
+	</data>
+</T3locallang>
