@@ -1,3 +1,7 @@
+2013-04-18  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Backend module (File > Sphinx Console) to compile documentation
+
 2013-04-17  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Add support for JSON and check of links
